# scaffold-stellar-frontend

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  reset.d.ts  rust-toolchain.toml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  contract-release.yml  dapp-ipfs.yml  main.yml  node.yml
app/: eslint.config.js  index.html  package.json  reset.d.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
app/src/: main.tsx
app/src/components/: FundAccountButton.tsx  GuessTheNumber.tsx  NetworkPill.tsx  WalletButton.tsx
app/src/components/layout/: Box.tsx
app/src/contracts/: util.ts
app/src/debug/components/: ErrorResponse.tsx  InvokeContractForm.tsx  JsonSchemaRenderer.tsx  LabelHeading.tsx  MetadataCard.tsx  PrettyJson.tsx  PrettyJsonTransaction.tsx  RenderArrayType.tsx  RenderPrimitivesType.tsx  RenderTupleType.tsx  TransactionSuccessCard.tsx
app/src/debug/hooks/: useAccountSequenceNumber.ts  useCheckTxSignatures.ts  useContracts.ts  usePrevious.ts  useRpcPrepareTx.ts  useSubmitRpcTx.ts
app/src/debug/util/: arrayItem.ts  capitalizeString.ts  delay.ts  getNetworkHeaders.ts  getWasmContractData.ts  isEmptyObject.ts  jsonSchema.ts  loadContractMetada.ts  prettifyJsonString.ts  sanitizeArray.ts  sanitizeObject.ts  signatureHint.ts  sorobanUtils.ts  xdrFraction.ts  xdrUtils.ts
app/src/debug/validate/: index.ts
app/src/debug/validate/methods/: getAccountThresholdError.ts  getAssetError.ts  getBipPathError.ts  getClaimableBalanceIdError.ts  getContractIdError.ts  getDataUrlError.ts  getDataValueError.ts  getEventsFiltersError.ts  getHomeDomainError.ts  getI128Error.ts  getI64Error.ts  getMemoError.ts  getNumberFractionError.ts  getOptionsSignerError.ts  getPositiveIntError.ts  getPositiveNumberError.ts  getPublicKeyError.ts  getRevokeSponsorshipError.ts  getTransactionHashError.ts  getU256Error.ts  getU32Error.ts  getU64Error.ts  getXdrError.ts
app/src/hooks/: useNotification.ts  useSubscription.ts  useWallet.ts  useWalletBalance.ts
app/src/pages/: Debugger.tsx  Home.tsx
app/src/providers/: NotificationProvider.css  NotificationProvider.tsx  WalletProvider.tsx
app/src/util/: contract.ts  storage.ts  wallet.ts
contracts/example-core/: Cargo.toml
contracts/example-status-message/: Cargo.toml
contracts/example-status-message/src/: lib.rs  test.rs
contracts/fungible-allowlist/src/: contract.rs  test.rs
contracts/fungible-token-interface/: Cargo.toml
contracts/fungible-token-interface/src/: contract.rs  test.rs
contracts/fungible-token-interface/test_snapshots/test/: burn_works.1.json  initial_state.1.json  mint_fails_when_paused.1.json  mint_works.1.json  transfer_fails_when_paused.1.json  transfer_from_fails_when_paused.1.json  transfer_from_works.1.json  transfer_works.1.json
contracts/guess-the-number/: Cargo.toml
contracts/guess-the-number/src/: lib.rs  test.rs  xlm.rs
contracts/guess-the-number/test_snapshots/test/: one_guess_in_ten_returns_true.1.json  only_admin_can_reset.1.json
contracts/hello_world/: Cargo.toml
contracts/nft-enumerable/: Cargo.toml
contracts/nft-enumerable/nft-enumerable/: Cargo.toml
contracts/nft-enumerable/nft-enumerable/test_snapshots/test/: enumerable_burn_works.1.json
contracts/nft-enumerable/src/: contract.rs  test.rs
contracts/nft-enumerable/test_snapshots/test/: enumerable_transfer_override_works.1.json  mint_exact_cap.1.json  mint_exceeds_cap.1.json  mint_multiple_exceeds_cap.1.json  mint_under_cap.1.json  query_cap_works.1.json
contracts/token/: Cargo.toml
scripts/: foreach-contract.js
src/: App.module.css  App.tsx  index.css  main.tsx
src/components/: Card.module.css  Card.tsx  ConnectAccount.tsx  ContractInteraction.tsx  ContractInteractionHello.tsx  ContractInteractionToken.tsx  FundAccountButton.tsx  GuessTheNumber.module.css  GuessTheNumber.tsx  MySorobanReactProvider.tsx  NetworkPill.tsx  Pill.tsx  WalletButton.module.css  WalletButton.tsx
src/components/WalletProvider/: WalletProvider.tsx
src/contracts/: fungible_allowlist_example.ts  guess_the_number.ts  nft_enumerable_example.ts  util.ts
src/debug/components/: ContractForm.tsx  ErrorResponse.tsx  ErrorText.tsx  InvokeContractForm.tsx  JsonSchemaFormRenderer.tsx  JsonSchemaRenderer.tsx  PositiveIntPicker.tsx  PrettyJson.tsx  PrettyJsonTextarea.tsx  PrettyJsonTransaction.tsx  RenderArrayType.tsx  RenderContractMetadata.tsx  RenderOneOf.tsx  RenderPrimitivesType.tsx  RenderTupleType.tsx  TransactionSuccessCard.tsx  TxResponse.tsx  ValidationResponseCard.tsx  XdrJsonViewer.tsx
src/debug/hooks/: useAccountSequenceNumber.ts  useSimulateTx.ts  useSubmitRpcTx.ts
src/debug/types/: types.ts
src/debug/util/: StellarXdr.ts  arrayItem.ts  dereferenceSchema.ts  fetchTxSignatures.ts  formatAmount.ts  getWasmContractData.ts  jsonSchema.ts  loadContractMetada.ts  parseToLosslessJson.ts  sanitizeArray.ts  sanitizeObject.ts  sorobanUtils.ts  trim.ts
src/debug/validate/methods/: getAmountError.ts  getArrayOfStringsError.ts  getAssetCodeError.ts  getAssetMultiError.ts  getClaimaintsError.ts  getDataNameError.ts  getI256Error.ts  getI32Error.ts  getRevokeSponsorshipError.ts  getSecretKeyError.ts  getTimeBoundsError.ts  getU128Error.ts
src/hooks/: useNotification.ts  useSubscription.ts  useWallet.ts  useWalletBalance.ts  wallet.hooks.ts
src/pages/: Debug.tsx  Debugger.tsx  Home.module.css  Home.tsx
src/providers/: NotificationProvider.css  NotificationProvider.tsx  WalletProvider.tsx  WalletProviders.tsx
src/util/: friendbot.ts  stellar-wallet-kit.ts  storage.ts  wallet.ts
