[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.package]
authors = ["AhaLabs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AhaLabs/scaffold-stellar"
version = "0.0.1"

[workspace.dependencies]
soroban-sdk = { version = "22.0.7" }
soroban-token-sdk = { version = "22.0.1" }
stellar-pausable = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.2.0" }
stellar-pausable-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.2.0" }
stellar-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.2.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
