[package]
name = "fungible-token-interface-example"
edition.workspace = true
license.workspace = true
repository = "https://github.com/OpenZeppelin/stellar-contracts"
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-pausable = { workspace = true }
stellar-pausable-macros = { workspace = true }
stellar-fungible = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
