[package]
name = "nft-enumerable-example"
edition.workspace = true
license.workspace = true
repository = "https://github.com/OpenZeppelin/stellar-contracts"
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-non-fungible = { workspace = true }
stellar-default-impl-macro = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
